--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,18 @@
-<h1>Ruteo</h1>
-<button routerLink="login" class="btn btn-dark m-1">Login</button>
-<button routerLink="bienvenida" class="btn btn-dark m-1">Bienvenida</button>
-<button routerLink="error" class="btn btn-dark m-1">Error</button>
-<button routerLink="asdasdasdas" class="btn btn-dark m-1">Error 2</button>
-<button routerLink="community" class="btn btn-dark m-1">Community</button>
+<div class="m-4">
+  <h1>Ruteo</h1>
+  <button routerLink="login" class="btn btn-dark m-1">Login</button>
+  <button routerLink="bienvenida" class="btn btn-dark m-1">Bienvenida</button>
+  <button routerLink="error" class="btn btn-dark m-1">Error</button>
+  <button routerLink="asdasdasdas" class="btn btn-dark m-1">Error 2</button>
+  <button routerLink="community" class="btn btn-dark m-1">Community</button>
+  <button routerLink="community/admin" class="btn btn-dark m-1">Admin</button>
+  <button routerLink="community/usuario" class="btn btn-dark m-1">
+    Usuario
+  </button>
 
-<hr />
-<router-outlet />
-<hr />
+  <hr />
+  <router-outlet />
+  <hr />
 
-<h5>Footer</h5>
-<!--
-
-  /bienvenida
-  /error
-  /login
-  /opsdfgsdjgfpsdpg
--->
+  <h5>Footer</h5>
+</div>
